@@ -408,6 +408,9 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/onmainwindow.cpp: add support for explicitly setting the private key
       bit size based on type and use values (currently) regarded as secure to
       generateHostKey ().
+    - src/onmainwindow.{cpp,h}: rename generateHostKey () to generateKey ()
+      and add a boolean parameter with a default of false to request a public
+      key. Change old invocations of generateHostKey () accordingly.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
